# vgl

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  remove_submodule.sh
cmake/: FindGLAD.cmake  FindPortAudio.cmake  Findnativefiledialog.cmake  assimpCopy.cmake  external.cmake  imgui.cmake  macros.cmake  projects.cmake
projects/: CMakeLists.txt
projects/canny/: main.cpp
projects/computer_vision/: CMakeLists.txt
projects/computer_vision/canny/: main.cpp
projects/computer_vision/difference_of_gaussian/: main.cpp
projects/computer_vision/example_filtered/: main.cpp
projects/computer_vision/example_separated_filters/: main.cpp
projects/computer_vision/harris/: main.cpp
projects/computer_vision/laplacian_of_gaussian/: main.cpp
projects/computer_vision/moravec/: main.cpp
projects/computer_vision/rot13/: main.cpp
projects/computer_vision/shi_tomasi/: main.cpp
projects/cubemap_generator/: main.cpp
projects/deferred/: main.cpp
projects/demo/: main.cpp
projects/difference_of_gaussian/: main.cpp
projects/example_filtered/: main.cpp
projects/example_model/: main.cpp
projects/example_separated_filters/: main.cpp
projects/example_texture/: main.cpp
projects/harris/: main.cpp
projects/laplacian_of_gaussian/: main.cpp
projects/moravec/: main.cpp
projects/music_vis/: audio_input.hpp  main.cpp  processing.hpp
projects/normal_mapping/: demo_util.hpp  main.cpp
projects/pbr/: main.cpp
projects/raytracing/: main.cpp
projects/shi_tomasi/: main.cpp
projects/textured_model/: main.cpp
shaders/: CMakeLists.txt
shaders/basic_shading/: normal.vert  phong.frag  phong.vert
shaders/blob_detection/: dog_first_pass.frag  dog_second_pass.frag
shaders/corner_detection/: harris.frag  non_max_suppression.frag  non_max_suppression_overlay.frag  shi_tomasi.frag
shaders/cv/blob_detection/: dog_first_pass.frag  dog_second_pass.frag  laplacian_normalized.frag
shaders/cv/corner_detection/: harris.frag  moravec_min_E.frag  shi_tomasi.frag
shaders/cv/edge_detection/: canny_double_threshold.frag  canny_non_max_suppression.frag
shaders/cv/filters/: gauss.frag  laplacian.frag  monochrome.frag  rot13.frag  separated_first_pass.frag  separated_second_pass.frag  sobel_xy.frag  sobel_xy_mag.frag  texture_average.frag  texture_gamma_correction.frag
shaders/debug/: bb.geom  bb.vert  lights.frag  lights.vert  red.frag
shaders/edge_detection/: canny_non_max_suppression.frag
shaders/filters/: gauss_x.frag  gauss_y.frag  laplacian.frag  separated_first_pass.frag  separated_second_pass.frag  sobel_xy_angle.frag  sobel_xy_first_pass.frag  sobel_xy_second_pass.frag  texture_filters.frag
shaders/imgui/: compile.bat  imgui.frag  imgui.vert
shaders/include/: bindings.glsl  binomial.glsl  bounds.glsl  cam.glsl  color_conversion.glsl  cubemap.glsl  draw_cmd.glsl  eigen.glsl  light.glsl  material.glsl  math_consts.glsl  matrix_op.glsl  scene_object.glsl  shading.glsl  tonemapping.glsl  vertex.glsl
shaders/minimal/: minimal.frag  minimal.vert  texture.frag  texture.vert
shaders/music_vis/: background.frag  billboard.glsl  billboards.frag  billboards.vert  binding.glsl  colors.glsl  mesh.frag  mesh.tesc  mesh.tese  mesh.vert  move_particles.comp  particle.glsl  render_iced_tea.frag  render_iced_tea.vert  render_particles.frag  render_particles.vert  render_water_particles.vert  spawn_iced_tea_particles.comp  spawn_particles.comp  spawn_water_particles.comp  vcr.frag
shaders/screen/: screen.frag
shaders/shading/: cubemapping.frag  cubemapping.vert  deferred_geometry.frag  deferred_lighting.frag  depth_prepass.frag  depth_prepass.vert  normal_cubemap.frag  normal_mapping.frag  normal_mapping.vert  phong.frag  phong.vert  raytracing.frag  raytracing.vert  shading.vert
shaders/util/: cubemap.frag  cubemap.vert  cubemap_equirectangular.frag  frustum_culling.comp  screen.frag
src/: CMakeLists.txt
src/vgl/control/: gui.cpp  gui.hpp  win_callbacks.hpp  window.cpp  window.hpp
src/vgl/core/: gui.cpp  gui.hpp  window.cpp  window.hpp
src/vgl/file/: file.cpp  file.hpp  file_paths.hpp  file_paths.hpp.in  image.cpp  image.hpp  image_file.cpp  image_file.hpp  texture_loading.hpp
src/vgl/gpu_api/gl/: buffer.hpp  debug.hpp  fbo.hpp  framebuffer.hpp  handle.cpp  handle.hpp  multidraw.hpp  shader.hpp  tex_format.hpp  texture.hpp  vao.hpp
src/vgl/math/: constants.hpp  eigen_utils.hpp  math_utils.hpp  pose.cpp  pose.hpp  projection.hpp
src/vgl/mesh/: mesh.hpp
src/vgl/rendering/: bounds.hpp  camera.cpp  camera.hpp  geometry.hpp  light.hpp  material.hpp  scene.cpp  scene.hpp  tex_info.hpp
src/vgl/utility/: container_utils.hpp  finally.hpp  profiling.hpp  ptr_util.hpp  size_functions.hpp  string_utils.hpp  type_checking.hpp
